--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>web-client</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but web-client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html lang="ru"><head><meta charset="UTF-8"><link rel="stylesheet" href="<%= BASE_URL %>reset-style.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&amp;subset=cyrillic-ext"><link rel="stylesheet" href="<%= BASE_URL %>main.css"><link rel="icon" href="<%= BASE_URL %>favicon.ico"><title>Рейтинг сериалов MovieRate.info</title></head><body><noscript>sorry js dont work</noscript><div class="app" id="app"><Head-Component></Head-Component><router-view name="content"></router-view><Footer-Component></Footer-Component></div></body></html>
